--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
 
 <body>
     <center class="my-12">
-        <audio src="Kyon Gaye Sare Junglee.mp3" controls autoplay></audio>
+        <audio id="hbd" src="Kyon Gaye Sare Junglee.mp3" loop controls></audio>
     </center>
+    <script type="text/javascript">
+        function autoplay() {
+            var r = confirm("Happy Birthday HEMANT");
+            if (r == true) {
+                document.getElementById("hbd").play();
+            }
+        }
+
+        autoplay();
+    </script>
+
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-col px-5 py-11 justify-center items-center">
             <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="img/5.jpg">
