--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
                 document.getElementById("hbd").play();
             }
         }
-
-        autoplay();
     </script>
 
     <section class="text-gray-600 body-font">
@@ -43,7 +41,9 @@
             </div>
         </div>
     </section>
-
+    <script>
+        autoplay();
+    </script>
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
 
