--- a/index.html
+++ b/index.html
@@ -14,20 +14,16 @@
             background-image: linear-gradient(pink, white, red, purple, blue);
         }
     </style>
+    <script>
+        window.onload = function() {
+            var context = new AudioContext();
+        }
+    </script>
 </head>
 
 <body>
-    <center class="my-12">
-        <audio id="hbd" src="Kyon Gaye Sare Junglee.mp3" loop controls></audio>
-    </center>
-    <script type="text/javascript">
-        function autoplay() {
-            var r = confirm("Happy Birthday HEMANT");
-            if (r == true) {
-                document.getElementById("hbd").play();
-            }
-        }
-    </script>
+
+
 
     <section class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-col px-5 py-11 justify-center items-center">
@@ -41,9 +37,7 @@
             </div>
         </div>
     </section>
-    <script>
-        autoplay();
-    </script>
+
     <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
 
@@ -73,7 +67,13 @@
             </div>
         </div>
     </section>
+    <center class="my-12">
+        <iframe src="Kyon Gaye Sare Junglee.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 
+        <audio id="audioID" autoplay loop> <source src="Kyon Gaye Sare Junglee.mp3"  type="audio/mp3"></audio>
+
+
+    </center>
     <script>
         var app = document.getElementById('typewriter');
 
