--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         </div>
     </section>
     <center class="my-12">
-        <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-        <audio id="player" autoplay controls loop>
-        <source src="Kyon Gaye Sare Junglee.mp3" type="audio/mp3">
-    </audio>
+        <audio controls="" autoplay="yes" mobile="yes">
+        <source src="Kyon Gaye Sare Junglee.mp3">
+      </audio>
+        </audio>
 
 
     </center>
     <script>
+        alert("HAPPY BIRTHDAY HEMANT");
         var app = document.getElementById('typewriter');
 
         var typewriter = new Typewriter(app, {
