--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section>
     <center class="my-12">
-        <audio controls="" autoplay="yes" mobile="yes">
+        <audio controls="" loop autoplay="yes" mobile="yes">
         <source src="Kyon Gaye Sare Junglee.mp3">
       </audio>
         </audio>
