--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
             .start();
     </script>
 
-    <video src="Ohooo.mp4"></video>
-
+<iframe width="560" height="315" src="Ohooo.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
