--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
             .start();
     </script>
 
-<iframe width="560" height="315" src="Ohooo.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<video width="320" height="240" controls>
+  <source type="video/mp4" src="Ohooo.mp4">
+</video
 </body>
 
 </html>
